# BMPtoTIM

./: .gitignore  BMPtoTIM  CMakeLists.txt  README.md
include/: bitmap_img.hpp  color.hpp  color_lookup_table.hpp  frame_buffer.hpp  pixel_data.hpp  screen_image_data.hpp  utils.hpp
src/: bitmap_img.cpp  color.cpp  color_lookup_table.cpp  main.cpp  pixel_data.cpp  screen_image_data.cpp  utils.cpp
